# softcube

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: f_simple.sc  v_imgui.sc  v_simple.sc  varying.def.sc
docs/: project_structure.md
engine/: engine.cpp  engine.hpp
engine/core/: common.hpp  logging.cpp  logging.hpp  window.cpp  window.hpp
engine/core/math/: aabb.cpp  aabb.hpp  math.hpp  math_utils.cpp  math_utils.hpp  matrix.cpp  matrix.hpp  quaternion.cpp  quaternion.hpp  transform.cpp  transform.hpp  vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp  vector4.cpp  vector4.hpp
engine/ecs/: ecs_manager.cpp  ecs_manager.hpp  entity.hpp  entity_factory.cpp  entity_factory.hpp
engine/ecs/components/basic/: name_component.hpp  tag_component.hpp  transform_component.hpp
engine/ecs/components/hierarchy/: children_component.hpp  parent_component.hpp
engine/ecs/components/physics/: velocity_component.hpp
engine/ecs/components/renderer/: camera_component.hpp  camera_controller_component.hpp  mesh_renderer_component.hpp
engine/ecs/systems/: system_base.hpp
engine/ecs/systems/basic/: transform_system.cpp  transform_system.hpp
engine/ecs/systems/hierarchy/: hierarchy_system.hpp
engine/ecs/systems/renderer/: camera_system.hpp  mesh_renderer_system.cpp  mesh_renderer_system.hpp
engine/graphics/layers/: editor_layer.cpp  editor_layer.hpp  imgui_layer.cpp  imgui_layer.hpp
engine/graphics/renderer/: renderer.cpp  renderer.hpp
engine/input/: input_manager.cpp  input_manager.hpp
engine/scene/: scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp
game/: main.cpp
game/scenes/: game_scene.cpp  game_scene.hpp
scripts/: bgfx.cmake  entt.cmake  freetype.cmake  imgui.cmake
src/: common.hpp  main.cpp
src/core/: input_manager.cpp  input_manager.hpp  logging.hpp  renderer.cpp  renderer.hpp  shaders.hpp  window.cpp  window.hpp
src/engine/: engine.cpp  engine.hpp
src/graphics/imgui/: imgui_layer.cpp  imgui_layer.hpp
src/scene/: game_scene.cpp  game_scene.hpp  scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp
src/utils/: shader_utils.cpp  shader_utils.hpp
